[HOTFIX] purchase_indonesia : adding css overcome overlapping thead after page break

--- a/purchase_indonesia/reports/report_quotation_comparison_form.xml
+++ b/purchase_indonesia/reports/report_quotation_comparison_form.xml
@@ -90,6 +90,10 @@
 							</t>	
 							
 							<div class="row" style="text-align:left;font-size:10pt;">
+							    <style>
+		           			    	table thead { display: table-header-group; }
+									table tr { page-break-inside: avoid; }
+		           			    </style>
 								<table style="border: 1px solid;padding:10px;font-size:10pt;" width="100%">
 									<thead>        
 										<tr class="label_table_header">
