--- a/purchase_indonesia/reports/report_goods_receipt_notes.xml
+++ b/purchase_indonesia/reports/report_goods_receipt_notes.xml
@@ -133,6 +133,10 @@
 			           			
 			              		<!-- Detail Header -->
 			              		<div class="row" style="text-align:left;font-size:10pt;">
+			              		    <style>
+			           			    	table thead { display: table-header-group; }
+										table tr { page-break-inside: avoid; }
+			           			    </style>
 			              			<table style="border: 1px solid;padding:10px;" width="100%">
 			              			    <thead>
 				                            <tr class="label_table_header">
