[FIX] hr_fingerprint_ams,hr_fingerprint_report: early leave wrong calculation
* hr_time_labour: no access controlled configured
* KHL operasional's time end at Friday 11:00
* KHL office's time end at Saturday 13:00
* Demo csv fingerprint attendance

--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -430,6 +430,10 @@
                 'search_default_by_reason': 1}</field>
         </record>
 
+        <menuitem id="attendance_report_menu" name="Attendance Reports"
+                  parent="hr_attendance.menu_hr_attendance_root"
+                    sequence="100"/>
+
         <menuitem id="upfingerprint_menu" name="Upkeep To Fingerprint"
                   parent="hr_fingerprint_ams.attendance_report_menu"
                   action="upfingerprint_action"
