--- a/purchase_indonesia/reports/report_quotation_comparison_form.xml
+++ b/purchase_indonesia/reports/report_quotation_comparison_form.xml
@@ -27,9 +27,14 @@
 							</div>
 							
 							<!-- Sub Header -->
-							<div class="row" style="text-align:left;font-size:10pt;">
-								<div class="col-xs-12" >
+							<div class="row">
+								<div class="col-xs-6" style="text-align:left;font-size:10pt;">
 									<b>PP No. &amp; Date : <span t-field="o.origin"/> <span t-field="o.requisition_id.request_id.create_date" t-field-options="{&quot;format&quot;: &quot;dd/MM/yyyy&quot;}"/> </b>
+								</div>
+								<div class="col-xs-6" style="text-align:center;font-size:20pt;color:red;">
+								  	<t t-if="o.requisition_id.request_id.is_confirmation">
+		              					<b>CONFIRMED</b>
+		              				</t>  	
 								</div>
 							</div>
 							
